@@ -1,3 +1,6 @@
+  [Michele Simionato]
+  * concurrent_tasks=0  disable the concurrency
+
   [Paolo Tormene]
   * Added to the engine server the possibility to log in and out
     programmatically by means of HTTP POST requests
